--- a/JavaApplication89/nbproject/project.properties
+++ b/JavaApplication89/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ConexionSQL
-application.vendor=admin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,19 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ConexionSQL.jar
+dist.jar=${dist.dir}/JavaApplication89.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-8.4.1.jre8.jar=C:\\Users\\admin\\Downloads\\enu\\mssql-jdbc-8.4.1.jre8.jar
-file.reference.mssql-jdbc-8.4.1.jre8.jar-1=C:\\Users\\Wilson Pop\\Documents\\NetBeansProjects\\Tarea12_Archivos\\mssql-jdbc-8.4.1.jre8.jar
-file.reference.mssql-jdbc-8.4.1.jre8.jar-2=mssql-jdbc-8.4.1.jre8.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mssql-jdbc-8.4.1.jre8.jar}:\
-    ${file.reference.mssql-jdbc-8.4.1.jre8.jar-1}:\
-    ${file.reference.mssql-jdbc-8.4.1.jre8.jar-2}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Tablas
+main.class=Paquete1.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
